SERVER-22461 Crash in mozjs code with invalid NumberLong object